# nova-hsp

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/baselines/: deep.yaml  heuristics.yaml  state.yaml  survival.yaml
configs/hsp/: ablation_no_gnn.yaml  ablation_no_sampling.yaml  base.yaml  dakos.yaml  learned.yaml  stochastic.yaml
configs/metrics/: collapse_prob.yaml  lead_time.yaml  robustness.yaml
configs/worlds/: ant_colony.yaml  sir_graph.yaml
data/processed/ant_colony/: all_runs.csv  generation_report.txt  labels_horizon_20_test.csv  labels_horizon_20_train.csv  labels_horizon_20_val.csv  test.csv  train.csv  val.csv
data/processed/ant_colony/test/run_70/: meta.json  obs.npy  survival_record.csv
data/processed/ant_colony/test/run_71/: meta.json  (+2 more)
data/processed/sir_graph/: all_runs.csv  generation_report.txt  labels_horizon_15_test.csv  labels_horizon_15_train.csv  labels_horizon_15_val.csv  labels_horizon_20_test.csv  labels_horizon_20_train.csv  labels_horizon_20_val.csv  test.csv  train.csv  val.csv
deprecated/: HSP — Hidden Survival Paths.md
docs/: BASELINES_STATUS.md  HSP_BASIN_ACCESS.md  PATRICK_HANDOFF.md  PUBLICATION_STATUS.md  README.md  ROADMAP.md
notebooks/: 01_sanity.ipynb  04_concept_validation.ipynb  05_hsp_vs_observables.ipynb  06_future_graph_exploration.ipynb  07_memory_ablation.ipynb  08_structural_diagnosis.ipynb  09_entropic_hsp.ipynb  101_st_structural.ipynb  10_st_acid_test.ipynb  11_monotonicity_proof.ipynb  12_semisynthetic_validation.ipynb
notebooks/neural/: 01_neural_hsp_hypothesis.ipynb  hypothesis.md
results/ant_colony/: dataset_qc_report.txt
results/ant_colony/baselines/logs/: training_summary.json
results/ant_colony/baselines/models/: cox.pkl  deep_hazard.pkl  ews.pkl  hmm.pkl  kaplan_meier.pkl  markov_chain.pkl  mlp.pkl  random_forest.pkl  state_models.pkl  survival_mlp.pkl  threshold_heuristic.pkl
results/ant_colony/evaluation/: all_results.pkl
results/ant_colony/evaluation/metrics/: summary.json
results/ant_colony/run_0/: T_event.json  log.txt  obs.npy
results/paper/: README.md  table1.md  table1.tex  table3.md  table3.tex
results/sir_graph/: dataset_qc_report.txt
results/sir_graph/baselines/logs/: training_summary.json
results/sir_graph/baselines/models/: aft.pkl  deep_hazard.pkl  kaplan_meier.pkl  markov_chain.pkl  random_forest.pkl  threshold_heuristic.pkl
results/sir_graph/evaluation/: all_results.pkl
results/sir_graph/evaluation/metrics/: summary.json
results/sir_graph/run_0/: T_event.json  log.txt  obs.npy
results/synthetic/: benchmark_run_level.csv  benchmark_summary.csv  run_level_metrics.csv  sigma_sweep_summary.csv  table1_summary.csv  table3_main_comparison.csv
scripts/: aggregate_results.py  check_labels.py  generate_figures.py  run_hsp_evaluation.py  validate_datasets.py
src/baseline/: __init__.py  example_device_usage.py  regression.py  types.py
src/baseline/deep/: deep_hazard.py  latent_encoder.py  temporal_classifier.py
src/baseline/deep_modern/rul/: lstm_rul.py  transformer_rul.py
src/baseline/deep_modern/state/: neural_ssm.py
src/baseline/deep_modern/survival/: neural_weibull.py
src/baseline/heuristics/: early_warning.py  linear_threshold.py
src/baseline/state/: hmm.py  markov.py
src/baseline/structural/: __init__.py  basin_stability.py  dfa.py
src/baseline/survival/: aft.py  cox_ph.py  kaplan_meier.py
src/evaluation/: EVALUATION_DOCS.md  __init__.py  aggregator.py  data_splitting.py  evaluation.py  integration.py  metrics.py  metrics_advanced.py  metrics_simple.py  robustness.py  unified_evaluator.py  visualizations.py
src/experiments/: __init__.py  export_paper_tables.py  generate_datasets.py  run_hsp_synthetic.py  run_table3_benchmark.py  unified_baseline_training.py
src/hsp/: __init__.py  basin_access.py  detector.py  dynamics.py  encoder.py  metrics.py  perturbation.py  survival.py  training.py
src/neural/: __init__.py
src/neural/flows/: __init__.py  ot_cfm.py
src/neural/models/: __init__.py  mlp.py
src/neural/npe/: __init__.py
src/utils/: DEVICE_README.md  device.py  logging.py
src/visualization/: generate_qc_plots.py  paper_plots.py
src/worlds/: ant_colony.py  base.py  coupled_sn.py  lake.py  may_harvest.py  sir_graph.py  stommel.py
tests/: README.md  test_aggregation.py  test_device.py  test_worlds.py
tests/baseline/: test_baselines_sprint1.py  test_baselines_sprint2.py
tests/evaluation/: test_advanced_metrics.py  test_aggregation.py  test_complete_pipeline.py  test_integration_minimal.py  test_integration_quick.py  test_robustness.py  test_robustness_quick.py  test_unified_evaluator.py
tests/visualization/: test_paper_plots.py
(+691 files in other folders)
