[project]
name = "nova-hsp"
version = "0.1.0"
description = "Hidden Survival Paths (HSP) framework"
readme = "README.md"
authors = [
    { name = "Vinicius Ruggeri", email = "vliraruggeri@gmail.com" },
    { name = "Patrick Mansour", email = "patrickmansour.dev@gmail.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26,<2.0",
    "scipy>=1.11,<2.0",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.4,<2.0",
    "torch>=2.2,<3.0",
    "torch-geometric>=2.5,<3.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "mlflow>=2.11,<3.0",
    "hydra-core>=1.3,<2.0",
    "networkx>=3.2,<4.0",
    "types-networkx (>=3.6.1.20251220,<4.0.0.0)",
    "lifelines>=0.29,<1.0",
    "hmmlearn>=0.3,<1.0",
    "scikit-survival>=0.22,<1.0",
]

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
# CUDA-enabled torch (Poetry respeita o index)
torch = { version = "^2.2", source = "pytorch-cuda" }

# PyG CUDA ops (resolvem conforme torch)
torch-scatter = "*"
torch-sparse = "*"
torch-cluster = "*"
torch-spline-conv = "*"

# Performance extras
torchmetrics = "^1.3"
numba = "^0.59"


[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.1"
isort = "^5.13"
ruff = "^0.2"
pre-commit = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
