[project]
name = "nova-hsp"
version = "0.4.0"
description = "HSP — Basin Access Probability for Early Warning of Critical Transitions"
readme = "README.md"
authors = [
    { name = "Vinicius Ruggeri", email = "vliraruggeri@gmail.com" },
    { name = "Patrick Mansour", email = "patrickmansour.dev@gmail.com" },
]
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core scientific
    "numpy>=1.26",
    "scipy>=1.11,<2.0",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.4,<2.0",

    # Deep learning
    "torch>=2.2,<3.0",

    # Visualization
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",

    # Experiment management
    "mlflow>=2.11,<3.0",
    "hydra-core>=1.3,<2.0",

    # Graphs (worlds topology)
    "networkx>=3.2,<4.0",

    # Baselines — survival analysis (Patrick's sprint)
    "lifelines>=0.29,<1.0",
    "scikit-survival>=0.22,<1.0",

    # Baselines — state-based (Patrick's sprint)
    "hmmlearn>=0.3,<1.0",
    "tensorboard (>=2.20.0,<3.0.0)",
    "diffrax (>=0.7.2,<0.8.0)",
]

[project.optional-dependencies]
# Neural ODE dynamics model
ode = ["torchdiffeq>=0.2.3"]
# Graph-based extensions (future)
graph = ["torch-geometric>=2.5,<3.0"]

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
torchmetrics = "^1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.1"
isort = "^5.13"
ruff = "^0.2"
pre-commit = "^3.6"
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
